add_subdirectory(behavior_tree)
set(BEHAVIOR_TREE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/behavior_tree/include PARENT_SCOPE)
set(BEHAVIOR_TREE_LIBRARIES behaviortree_cpp PARENT_SCOPE)

add_subdirectory(boost)
set(BOOST_INCLUDE_DIRS ${BOOST_INCLUDE_DIRS} PARENT_SCOPE)
set(BOOST_LIBRARIES ${BOOST_LIBRARIES} PARENT_SCOPE)

add_subdirectory(flecs)
set(FLECS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/flecs/include PARENT_SCOPE)
set(FLECS_LIBRARIES flecs PARENT_SCOPE)

add_subdirectory(glad)
set(GLAD_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glad/include PARENT_SCOPE)
set(GLAD_LIBRARIES glad PARENT_SCOPE)

add_subdirectory(glfw)
set(GLFW_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glfw/include PARENT_SCOPE)
set(GLFW_LIBRARIES glfw ${GLFW_LIBRARIES} PARENT_SCOPE)

add_subdirectory(glm)
set(GLM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glm PARENT_SCOPE)
set(GLM_LIBRARIES glm::glm PARENT_SCOPE)

add_subdirectory(opus)
set(OPUS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/opus/include PARENT_SCOPE)
set(OPUS_LIBRARIES opus PARENT_SCOPE)

add_subdirectory(soil2)
set(SOIL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/soil2/src PARENT_SCOPE)
set(SOIL_LIBRARIES soil2 PARENT_SCOPE)

add_subdirectory(spdlog)
set(SPDLOG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/spdlog/include PARENT_SCOPE)
set(SPDLOG_LIBRARIES spdlog PARENT_SCOPE)