add_subdirectory(algorithm)
    set(ALGORITHM_INC algorithm/include)
    set(ALGORITHM_LIB boost_algorithm)
add_subdirectory(align)
    set(ALIGN_INC align/include)
    set(ALIGN_LIB boost_align)
add_subdirectory(any)
    set(ANY_INC any/include)
    set(ANY_LIB boost_any)
add_subdirectory(array)
    set(ARRAY_INC array/include)
    set(ARRAY_LIB boost_array)
add_subdirectory(asio)
    set(ASIO_INC asio/include)
    set(ASIO_LIB boost_asio)
add_subdirectory(assert)
    set(ASSERT_INC assert/include)
    set(ASSERT_LIB boost_assert)
add_subdirectory(atomic)
    set(ATOMIC_INC atomic/include)
    set(ATOMIC_LIB boost_atomic)
add_subdirectory(bimap)
    set(BIMAP_INC bimap/include)
    set(BIMAP_LIB boost_bimap)
add_subdirectory(bind)
    set(BIND_INC bind/include)
    set(BIND_LIB boost_bind)
add_subdirectory(chrono)
    set(CHRONO_INC chrono/include)
    set(CHRONO_LIB boost_chrono)
add_subdirectory(circular_buffer)
    set(CIRCULAR_BUFFER_INC circular_buffer/include)
    set(CIRCULAR_BUFFER_LIB boost_circular_buffer)
add_subdirectory(concept_check)
    set(CONCEPT_INC concept_check/include)
    set(CONCEPT_LIB boost_concept_check)
add_subdirectory(config)
    set(CONFIG_INC config/include)
    set(CONFIG_LIB boost_config)
add_subdirectory(container)
    set(CONTAINER_INC container/include)
    set(CONTAINER_LIB boost_container)
add_subdirectory(container_hash)
    set(CONTAINER_HASH_INC container_hash/include)
    set(CONTAINER_HASH_LIB boost_container_hash)
add_subdirectory(context)
    set(CONTEXT_INC context/include)
    set(CONTEXT_LIB boost_context)
add_subdirectory(conversion)
    set(CONVERSION_INC conversion/include)
    set(CONVERSION_LIB boost_conversion)
add_subdirectory(core)
    set(CORE_INC core/include)
    set(CORE_LIB boost_core)
add_subdirectory(coroutine)
    set(COROUTINE_INC coroutine/include)
    set(COROUTINE_LIB boost_coroutine)
add_subdirectory(date_time)
    set(DATE_TIME_INC date_time/include)
    set(DATE_TIME_LIB boost_date_time)
add_subdirectory(describe)
    set(DESCRIBE_INC describe/include)
    set(DESCRIBE_LIB boost_describe)
add_subdirectory(detail)
    set(DETAIL_INC detail/include)
    set(DETAIL_LIB boost_detail)
add_subdirectory(dynamic_bitset)
    set(DYNAMIC_BITSET_INC dynamic_bitset/include)
    set(DYNAMIC_BITSET_LIB boost_dynamic_bitset)
add_subdirectory(endian)
    set(ENDIAN_INC endian/include)
    set(ENDIAN_LIB boost_endian)
add_subdirectory(exception)
    set(EXCEPTION_INC exception/include)
    set(EXCEPTION_LIB boost_exception)
add_subdirectory(filesystem)
    set(FILESYSTEM_INC filesystem/include)
    set(FILESYSTEM_LIB boost_filesystem)
add_subdirectory(foreach)
    set(FOREACH_INC foreach/include)
    set(FOREACH_LIB boost_foreach)
add_subdirectory(function)
    set(FUNCTION_INC function/include)
    set(FUNCTION_LIB boost_function)
add_subdirectory(function_types)
    set(FUNCTION_TYPES_INC function_types/include)
    set(FUNCTION_TYPES_LIB boost_function_types)
add_subdirectory(functional)
    set(FUNCTIONAL_INC functional/include)
    set(FUNCTIONAL_LIB boost_functional)
add_subdirectory(fusion)
    set(FUSION_INC fusion/include)
    set(FUSION_LIB boost_fusion)
add_subdirectory(integer)
    set(INTEGER_INC integer/include)
    set(INTEGER_LIB boost_integer)
add_subdirectory(intrusive)
    set(INTRUSIVE_INC intrusive/include)
    set(INTRUSIVE_LIB boost_intrusive)
add_subdirectory(io)
    set(IO_INC io/include)
    set(IO_LIB boost_io)
add_subdirectory(iterator)
    set(ITERATOR_INC iterator/include)
    set(ITERATOR_LIB boost_iterator)
add_subdirectory(lambda)
    set(LAMBDA_INC lambda/include)
    set(LAMBDA_LIB boost_lambda)
add_subdirectory(lexical_cast)
    set(LEXICAL_CAST_INC lexical_cast/include)
    set(LEXICAL_CAST_LIB boost_lexical_cast)
add_subdirectory(locale)
    set(LOCALE_INC locale/include)
    set(LOCALE_LIB boost_locale)
add_subdirectory(move)
    set(MOVE_INC move/include)
    set(MOVE_LIB boost_move)
add_subdirectory(mp11)
    set(MP11_INC mp11/include)
    set(MP11_LIB boost_mp11)
add_subdirectory(mpl)
    set(MPL_INC mpl/include)
    set(MPL_LIB boost_mpl)
add_subdirectory(multi_array)
    set(MULTI_ARRAY_INC multi_array/include)
    set(MULTI_ARRAY_LIB boost_multi_array)
add_subdirectory(multi_index)
    set(MULTI_INDEX_INC multi_index/include)
    set(MULTI_INDEX_LIB boost_multi_index)
add_subdirectory(numeric_conversion)
    set(NUMERIC_CONVERSION_INC numeric_conversion/include)
    set(NUMERIC_CONVERSION_LIB boost_numeric_conversion)
add_subdirectory(optional)
    set(OPTIONAL_INC optional/include)
    set(OPTIONAL_LIB boost_optional)
add_subdirectory(phoenix)
    set(PHOENIX_INC phoenix/include)
    set(PHOENIX_LIB boost_phoenix)
add_subdirectory(poly_collection)
    set(POLY_COLLECTION_INC poly_collection/include)
    set(POLY_COLLECTION_LIB boost_poly_collection)
add_subdirectory(pool)
    set(POOL_INC pool/include)
    set(POOL_LIB boost_pool)
add_subdirectory(predef)
    set(PREDEF_INC predef/include)
    set(PREDEF_LIB boost_predef)
add_subdirectory(preprocessor)
    set(PREPROCESSOR_INC preprocessor/include)
    set(PREPROCESSOR_LIB boost_preprocessor)
add_subdirectory(property_map)
    set(PROPERTY_MAP_INC property_map/include)
    set(PROPERTY_MAP_LIB boost_property_map)
add_subdirectory(proto)
    set(PROTO_INC proto/include)
    set(PROTO_LIB boost_proto)
add_subdirectory(ptr_container)
    set(PTR_CONTAINER_INC ptr_container/include)
    set(PTR_CONTAINER_LIB boost_ptr_container)
add_subdirectory(random)
    set(RANDOM_INC random/include)
    set(RAMDON_LIB boost_random)
add_subdirectory(range)
    set(RANGE_INC range/include)
    set(RANGE_LIB boost_range)
add_subdirectory(ratio)
    set(RATIO_INC ratio/include)
    set(RATIO_LIB boost_ratio)
add_subdirectory(rational)
    set(RATIONAL_INC rational/include)
    set(RATIONAL_LIB boost_rational)
add_subdirectory(regex)
    set(REGEX_INC regex/include)
    set(REGEX_LIB boost_regex)
add_subdirectory(serialization)
    set(SERIALIZATION_INC serialization/include)
    set(SERIALIZATION_LIB boost_serialization)
add_subdirectory(smart_ptr)
    set(SMART_PTR_INC smart_ptr/include)
    set(SMART_PTR_LIB boost_smart_ptr)
add_subdirectory(sort)
    set(SORT_INC sort/include)
    set(SORT_LIB boost_sort)
add_subdirectory(spirit)
    set(SPIRIT_INC spirit/include)
    set(SPIRIT_LIB boost_spirit)
add_subdirectory(statechart)
    set(STATECHART_INC statechart/include)
    set(STATECHART_LIB boost_statechart)
add_subdirectory(static_assert)
    set(STATIC_ASSERT_INC static_assert/include)
    set(STATIC_ASSERT_LIB boost_static_assert)
add_subdirectory(system)
    set(SYSTEM_INC system/include)
    set(SYSTEM_LIB boost_system)
add_subdirectory(test)
    set(TEST_INC test/include)
    set(TEST_LIB boost_unit_test_framework)
add_subdirectory(thread)
    set(THREAD_INC thread/include)
    set(THREAD_SRC boost_thread)
add_subdirectory(throw_exception)
    set(THROW_EXCEPTION_INC throw_exception/include)
    set(THROW_EXCEPTION_LIB boost_throw_exception)
add_subdirectory(tokenizer)
    set(TOKENIZER_INC tokenizer/include)
    set(TOKENIZER_LIB boost_tokenizer)
add_subdirectory(tti)
    set(TTI_INC tti/include)
    set(TTI_LIB boost_tti)
add_subdirectory(tuple)
    set(TUPLE_INC tuple/include)
    set(TUPLE_SRC boost_tuple)
add_subdirectory(type_erasure)
    set(TYPE_ERASURE_INC type_erasure/include)
    set(TYPE_ERASURE_LIB boost_type_erasure)
add_subdirectory(type_index)
    set(TYPE_INDEX_INC type_index/include)
    set(TYPE_INDEX_LIB boost_type_index)
add_subdirectory(type_traits)
    set(TYPE_TRAITS_INC type_traits/include)
    set(TYPE_TRAITS_LIB boost_type_traits)
add_subdirectory(typeof)
    set(TYPEOF_INC typeof/include)
    set(TYPEOF_LIB boost_typeof)
add_subdirectory(unordered)
    set(UNORDERED_INC unordered/include)
    set(UNORDERED_LIB boost_unordered)
add_subdirectory(utility)
    set(UTILITY_INC utility/include)
    set(UTILITY_LIB boost_utility)
add_subdirectory(uuid)
    set(UUID_INC uuid/include)
    set(UUID_LIB boost_uuid)
add_subdirectory(variant)
    set(VARIANT_INC variant/include)
    set(VARIANT_LIB boost_variant)
add_subdirectory(variant2)
    set(VARIANT2_INC variant2/include)
    set(VARIANT2_LIB boost_variant2)
add_subdirectory(vmd)
    set(VMD_INC vmd/include)
    set(VMD_LIb boost_vmd)
add_subdirectory(winapi)
    set(WINAPI_INC winapi/include)
    set(WINAPI_LIB boost_winapi)


set(BOOST_INCLUDE_DIRS
        ${ALGORITHM_INC} ${ALIGN_INC} ${ANY_INC} ${ARRAY_INC} ${ASIO_INC} ${ASSERT_INC} ${ATOMIC_INC}

        ${BIMAP_INC} ${BIND_INC}

        ${CHRONO_INC} ${CIRCULAR_BUFFER_INC} ${CONCEPT_CHECK_INC} ${CONFIG_INC} ${CONTAINER_INC} ${CONTAINER_HASH_INC}
        ${CONTEXT_INC} ${CONVERSION_INC} ${CORE_INC} ${COROUTINE_INC}

        ${DATE_TIME_INC} ${DESCRIBE_INC} ${DETAIL_INC} ${DYNAMIC_BITSET_INC}

        ${ENDIAN_INC} ${EXCEPTION_INC}

        ${FILESYSTEM_INC} ${FOREACH_INC} ${FUNCTION_INC} ${FUNCTION_TYPES_INC} ${FUNCTIONAL_INC} ${FUSION_INC}

        ${INTEGER_INC} ${INTRUSIVE_INC} ${IO_INC} ${ITERATOR_INC}

        ${LAMBDA_INC} ${LEXICAL_CAST_INC} ${LOCALE_INC}

        ${MOVE_INC} ${MP11_INC} ${MPL_INC} ${MULTI_ARRAY_INC} ${MULTI_INDEX_INC}

        ${NUMERIC_CONVERSION_INC}

        ${OPTIONAL_INC}

        ${PHOENIX_INC} ${POLY_COLLECTION_INC} ${POOL_INC} ${PREDEF_INC} ${PREPROCESSOR_INC} ${PROPERTY_MAP_INC}
        ${PROTO_INC} ${PTR_CONTAINER_INC}

        ${RANDOM_INC} ${RANGE_INC} ${RATIO_INC} ${RATIONAL_INC} ${REGEX_INC}

        ${SERIALIZATION_INC} ${SMART_PTR_INC} ${SORT_INC} ${SPIRIT_INC} ${STATECHART_INC} ${STATIC_ASSERT_INC} ${SYSTEM_INC}

        ${THREAD_INC} ${THROW_EXCEPTION_INC} ${TOKENIZER_INC} ${TTI_INC} ${TUPLE_INC} ${TYPE_ERASURE_INC}
        ${TYPE_INDEX_INC} ${TYPE_TRAITS_INC} ${TYPEOF_INC}

        ${UNORDERED_INC} ${UTILITY_INC} ${UUID_INC}

        ${VMD_INC} ${VARIANT_INC} ${VARIANT2_INC}

        ${WINAPI_INC}
    PARENT_SCOPE)
set(BOOST_LIBRARIES
        ${ALGORITHM_LIB} ${ALIGN_LIB} ${ANY_LIB} ${ARRAY_LIB} ${ASIO_LIB} ${ASSERT_LIB} ${ATOMIC_LIB}

        ${BIMAP_LIB} ${BIND_LIB}

        ${CHRONO_LIB} ${CIRCULAR_BUFFER_LIB} ${CONCEPT_CHECK_LIB} ${CONFIG_LIB} ${CONTAINER_LIB} ${CONTAINER_HASH_LIB}
        ${CONTEXT_LIB} ${CONVERSION_LIB} ${CORE_LIB} ${COROUTINE_LIB}

        ${DATE_TIME_LIB} ${DESCRIBE_LIB} ${DETAIL_LIB} ${DYNAMIC_BITSET_LIB}

        ${ENDIAN_LIB} ${EXCEPTION_LIB}

        ${FILESYSTEM_LIB} ${FOREACH_LIB} ${FUNCTION_LIB} ${FUNCTION_TYPES_LIB} ${FUNCTIONAL_LIB} ${FUSION_LIB}

        ${INTEGER_LIB} ${INTRUSIVE_LIB} ${IO_LIB} ${ITERATOR_LIB}

        ${LAMBDA_LIB} ${LEXICAL_CAST_LIB} ${LOCALE_LIB}

        ${MOVE_LIB} ${MP11_LIB} ${MPL_LIB} ${MULTI_ARRAY_LIB} ${MULTI_INDEX_LIB}

        ${NUMERIC_CONVERSION_LIB}

        ${OPTIONAL_LIB}

        ${PHOENIX_LIB} ${POLY_COLLECTION_LIB} ${POOL_LIB} ${PREDEF_LIB} ${PREPROCESSOR_LIB} ${PROPERTY_MAP_LIB}
        ${PROTO_LIB} ${PTR_CONTAINER_LIB}

        ${RANDOM_LIB} ${RANGE_LIB} ${RATIO_LIB} ${RATIONAL_LIB} ${REGEX_LIB}

        ${SERIALIZATION_LIB} ${SMART_PTR_LIB} ${SORT_LIB} ${SPIRIT_LIB} ${STATECHART_LIB} ${STATIC_ASSERT_LIB} ${SYSTEM_LIB}

        ${THREAD_LIB} ${THROW_EXCEPTION_LIB} ${TOKENIZER_LIB} ${TTI_LIB} ${TUPLE_LIB} ${TYPE_ERASURE_LIB}
        ${TYPE_INDEX_LIB} ${TYPE_TRAITS_LIB} ${TYPEOF_LIB}

        ${UNORDERED_LIB} ${UTILITY_LIB} ${UUID_LIB}

        ${VMD_LIB} ${VARIANT_LIB} ${VARIANT2_LIB}

        ${WINAPI_LIB}
    PARENT_SCOPE)
